# KiwiCogs

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.md  REPO_INSTRUCTIONS.md  conftest.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: main.yml  on-release-main.yml  release-drafter.yml  validate-codecov-config.yml
docs/: index.md  modules.md
docs/examples/: hierarchical.md  lights.md  tennis.md
examples/: hierarchical_machine.py  lights.py  tennis.py
examples/hierarchical/: index.html
examples/lights/: index.html
examples/tennis/: index.html
kiwi_cogs/: __init__.py  event.py  exceptions.py  machine.py  state.py  transition.py  utils.py
modules/: index.html
search/: search_index.json
tests/: test_async_machine.py  test_hierachical_machine.py  test_machine.py  test_tennis_fsm.py  test_turnstile_fsm.py
