[tool.poetry]
name = "kiwi_cogs"
version = "0.0.1"
description = "A simple and easy to use state machine library "
authors = ["David Hall <fdev@davidhall.tech>"]
repository = "https://github.com/mopeyjellyfish/kiwi-cogs"
documentation = "https://mopeyjellyfish.github.io/kiwi-cogs/"
readme = "README.md"
packages = [
  {include = "kiwi_cogs"}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pydantic = "^1.10.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.6.4"
mypy = "^0.981"
pre-commit = "^2.20.0"
tox = "^3.25.1"
pytest-asyncio = "^0.21.0"
greenlet = "^2.0.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = ">=8.5.10,<10.0.0"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.mypy]
files = ["kiwi_cogs"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["kiwi_cogs"]
concurrency = ["greenlet"]

[tool.pytest.ini_options]
asyncio_mode="auto"

[tool.deptry]
    extend_exclude = [
        ".*/tests/",
        "conftest.py"
    ]
